# eiken-vocab

./: .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package.json  pyproject.toml
.github/workflows/: static.yml
ast/: choices.ts  content.ts  conversation.ts  index.ts  question.ts  section.ts  text.ts
rakutenai/: ai.ts  chat.ts
rakutenai/core/: chat-types.ts  types.ts
steps/1-preprocess-pdf/: combine_pdf.py  crop_question.py  format_answer.py  format_question.py  main.ipynb
steps/2-format-by-llm/: eiken.ts  index.ts
steps/3-parse-llm-output/: output_html_to_ast_json.ts
steps/4-build-wordlist-source/: main.ts
steps/5-build-vocablist/: count.py  main.ipynb
steps/6-add-context/: load.ts  main.ts  schema.ts
viewer/: index.html  package.json  vite.config.ts
viewer/src/: App.css  App.tsx  MetadataViewer.tsx  index.tsx
