[project]
name = "eiken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "huggingface-hub>=1.2.3",
    "numpy>=2.3.5",
    "pdfplumber>=0.11.8",
    "pypdf>=6.4.2",
    "reportlab>=4.4.6",
    "spacy>=3.8.11",
]
